--- a/style.css
+++ b/style.css
@@ -8,6 +8,16 @@ body {
 	height: calc(100vh/3);
 	width: 100vw;
 }
+.red{
+	display: flex;
+	height: calc(100vh/5);
+	width: 100vw;
+}
+.black{
+	display: flex;
+	height: calc(100vh/3.7);
+	width: 100vw;
+}
 .yellow{
 	display: flex;
 	height: calc(100vh/3);
@@ -16,19 +26,25 @@ body {
 }
 .brown{
 	display: flex;
-	height: 100vh;
+	height: 100%;
 	width: calc(25vw/2);
 	background-color:  #000000;
 }
 .purple{
 	display: flex;
-	height: calc(100vh/3);
-	width: calc(100vw/6);
+	height: calc(100vh/5);
+	width: calc(100vw/17);
 	background-color:  #800080;
 }
 .green{
 	display: flex;
-	height: calc(100vh/3);
-	width: calc(100vw/6);
+	height: calc(100vh/5);
+	width: calc(100vw/17);
+	background-color:  #000000;
+}
+.a{
+	display: flex;
+	height: 100%;
+	width: 100%;
 	background-color:  #000000;
 }
