--- a/style.css
+++ b/style.css
@@ -8,16 +8,6 @@ body {
 	height: calc(100vh/3);
 	width: 100vw;
 }
-.red{
-	display: flex;
-	height: calc(100vh/5);
-	width: 100vw;
-}
-.black{
-	display: flex;
-	height: calc(100vh/3.7);
-	width: 100vw;
-}
 .yellow{
 	display: flex;
 	height: calc(100vh/3);
@@ -26,25 +16,19 @@ body {
 }
 .brown{
 	display: flex;
-	height: 100%;
+	height: 100vh;
 	width: calc(25vw/2);
 	background-color:  #000000;
 }
 .purple{
 	display: flex;
-	height: calc(100vh/5);
-	width: calc(100vw/17);
+	height: calc(100vh/3);
+	width: calc(100vw/6);
 	background-color:  #800080;
 }
 .green{
 	display: flex;
-	height: calc(100vh/5);
-	width: calc(100vw/17);
-	background-color:  #000000;
-}
-.a{
-	display: flex;
-	height: 100%;
-	width: 100%;
+	height: calc(100vh/3);
+	width: calc(100vw/6);
 	background-color:  #000000;
 }
